<resources>
    <string name="app_name">SignUpApp</string>
    <string name="label_sign_up_fragment">SignUp</string>
    <string name="ok">OK</string>
    <string name="label_camera_fragment">Camera</string>
    <string name="label_confirmation_fragment">Confirmation</string>
    <string name="sign_up_title">Profile Creation</string>
    <string name="sign_up_sub_title">Use the form below to submit your portfolio.\nAn email and password are required.</string>
    <string name="placeholder_first_name">First Name</string>
    <string name="placeholder_email">Email Address</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_web_site">Website</string>
    <string name="add_avatar">Tap to add avatar</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name_empty_error">First name can not be empty!</string>
    <string name="password_empty_error">Password should not be empty!</string>
    <string name="website_empty_error">Website can not be empty!</string>
    <string name="profile_photo_empty_error">Profile photo can not be empty!</string>Metin
    <string name="email_invalid">Email is invalid!</string>
    <string name="camera_permission_error">You must give camera permission to take a profile photo!</string>
    <string name="greeting_with_name">Hello, %1$s!</string>
    <string name="sign_in_description">Your super-awesome portfolio has been successfully submitted! The preview below is what the community will see!</string>
    <string name="invalid_password_message">
        Password must have these rules:\n
        \u2022 Minimum length of 8 characters.\n
        \u2022 At least one alphabetic character (uppercase or lowercase).\n
        \u2022 At least one numeric digit.</string>
</resources>
